--- a/backup_overnight.conf
+++ b/backup_overnight.conf
@@ -1,3 +1,10 @@
+#------------------------------------------------------------------------------
+#
+#               Compulsory configuration options
+#
+#------------------------------------------------------------------------------
+
+
 LogPath=/srv/samba/Documents_Charl/Computer_Technical/Logs
 
 #Path details for backup of system itself excluding data
@@ -19,3 +26,11 @@ CloudCopyDestinationPath=AmazonDrive:Backups_Copy
 #Path details for cloud source
 CloudMirrorSourcePath=/srv/samba/
 CloudMirrorDestinationPath=AmazonDrive:Backups_Mirror
+
+
+#------------------------------------------------------------------------------
+#
+#               Optional configuration options
+#
+#------------------------------------------------------------------------------
+
