--- a/backup_overnight.conf
+++ b/backup_overnight.conf
@@ -34,3 +34,6 @@ CloudMirrorDestinationPath=AmazonDrive:Backups_Mirror
 #
 #------------------------------------------------------------------------------
 
+# list Exclusions below are modified from Arch Wiki
+# https://wiki.archlinux.org/index.php/Full_system_backup_with_rsync
+SystemExclusions=/dev,/proc,/sys,/tmp,/run,/srv,/mnt,/media,/lost+found
