--- a/backup_overnight.conf
+++ b/backup_overnight.conf
@@ -1,3 +1,16 @@
+#=============================================================================
+#
+#       Instructions for completing
+#       ---------------------------
+#       (1) All paths exclude trailing / unless otherwise stated
+#       (2) Be careful of mirror destinations, files not in source will be
+#           deleted in the mirror directory
+#
+#=============================================================================       
+
+
+
+
 #------------------------------------------------------------------------------
 #
 #               Compulsory configuration options
@@ -7,12 +20,15 @@
 
 LogPath=/srv/samba/Documents_Charl/Computer_Technical/Logs
 
-#Path details for backup of system itself excluding data
+#Path details for mirror backup of system itself excluding data
+# ***** THIS IS A MIRROR FILES IN DESTINATION NOT IN SOURCE WILL BE DELETED ******
 OS_SourcePath=/
 OS_DestinationPath=/srv/samba/Documents_Charl/010_EncryptForCloudBackup/ArchSystemBackups/ArchServer
-OS_TarDestinationFile=/srv/samba/Documents_Charl/010_EncryptForCloudBackup/ArchSystemBackups/ArchServerTarballs/$date.ArchServerBackup.tar.gz
+OS_TarDestinationPath=/srv/samba/Documents_Charl/010_EncryptForCloudBackup/ArchSystemBackups/ArchServerTarballs/$date.ArchServerBackup.tar.gz
+
 
 #Path details for data mirror (there is no data copy as this is seperately taken care of by rsnapshot
+# ***** THIS IS A MIRROR FILES IN DESTINATION NOT IN SOURCE WILL BE DELETED ******
 MirrorSourcePath=/srv/samba/
 MirrorDestinationPath=/mnt/backups/mirror_overnight
 
@@ -36,4 +52,4 @@ CloudMirrorDestinationPath=AmazonDrive:Backups_Mirror
 
 # list Exclusions below are modified from Arch Wiki
 # https://wiki.archlinux.org/index.php/Full_system_backup_with_rsync
-SystemExclusions=/dev,/proc,/sys,/tmp,/run,/srv,/mnt,/media,/lost+found
+OS_Exclusions=/dev,/proc,/sys,/tmp,/run,/srv,/mnt,/media,/lost+found
