array rsync exclusions

--- a/backup_overnight.conf
+++ b/backup_overnight.conf
@@ -50,6 +50,8 @@ CloudMirrorDestinationPath=AmazonDrive:Backups_Mirror
 #
 #------------------------------------------------------------------------------
 
+# format for use by rsync
 # list Exclusions below are modified from Arch Wiki
 # https://wiki.archlinux.org/index.php/Full_system_backup_with_rsync
-OS_Exclusions=/dev,/proc,/sys,/tmp,/run,/srv,/mnt,/media,/lost+found
+OS_Exclusions=/dev,/proc,/sys,/tmp,/run,/mnt,/media,/srv/samba/,/lost+found
+# OS_Exclusions="/dev/*","proc/*","sys/*","tmp/*","/run/*","mnt/*","/media/*","/srv/samba/*","/lost+found"
